// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Capital letters in story names converted into delimiters 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"capitalization--blue-tiny-cat\\": {
      \\"name\\": \\"Blue tiny cat\\",
      \\"levels\\": [
        \\"Capitalization\\"
      ],
      \\"locStart\\": 3,
      \\"locEnd\\": 5,
      \\"filePath\\": \\"tests/fixtures/capitalization.stories.tsx\\",
      \\"parameters\\": {}
    },
    \\"capitalization--big-barking-dog\\": {
      \\"name\\": \\"Big barking dog\\",
      \\"levels\\": [
        \\"Capitalization\\"
      ],
      \\"locStart\\": 7,
      \\"locEnd\\": 9,
      \\"filePath\\": \\"tests/fixtures/capitalization.stories.tsx\\",
      \\"parameters\\": {}
    }
  }
}"
`;

exports[`Capital letters in the filename converted into delimiters 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"filename-capitalization--test\\": {
      \\"name\\": \\"Test\\",
      \\"levels\\": [
        \\"Filename capitalization\\"
      ],
      \\"locStart\\": 3,
      \\"locEnd\\": 5,
      \\"filePath\\": \\"tests/fixtures/filenameCapitalization.stories.tsx\\",
      \\"parameters\\": {}
    }
  }
}"
`;

exports[`Default title is used instead of the file name 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"title--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 7,
      \\"locEnd\\": 9,
      \\"filePath\\": \\"tests/fixtures/default-title.stories.tsx\\",
      \\"parameters\\": {}
    }
  }
}"
`;

exports[`Extract and merge story parameters 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"title--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 13,
      \\"locEnd\\": 15,
      \\"filePath\\": \\"tests/fixtures/story-parameters.stories.tsx\\",
      \\"parameters\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [
            \\"chrome\\",
            \\"firefox\\"
          ],
          \\"width\\": \\"500px\\"
        },
        \\"links\\": true
      }
    },
    \\"title--dog\\": {
      \\"name\\": \\"Dog\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 25,
      \\"locEnd\\": 27,
      \\"filePath\\": \\"tests/fixtures/story-parameters.stories.tsx\\",
      \\"parameters\\": {
        \\"baseweb\\": {
          \\"theme\\": \\"dark\\",
          \\"browsers\\": [
            \\"chrome\\",
            \\"webkit\\"
          ]
        }
      }
    }
  }
}"
`;

exports[`Extract default parameters 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"title--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Title\\"
      ],
      \\"locStart\\": 12,
      \\"locEnd\\": 14,
      \\"filePath\\": \\"tests/fixtures/default-parameters.stories.tsx\\",
      \\"parameters\\": {
        \\"baseweb\\": {
          \\"foo\\": \\"title\\"
        }
      }
    }
  }
}"
`;

exports[`Single file with two stories 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"animals--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Animals\\"
      ],
      \\"locStart\\": 3,
      \\"locEnd\\": 5,
      \\"filePath\\": \\"tests/fixtures/animals.stories.tsx\\",
      \\"parameters\\": {}
    },
    \\"animals--dog\\": {
      \\"name\\": \\"Dog\\",
      \\"levels\\": [
        \\"Animals\\"
      ],
      \\"locStart\\": 7,
      \\"locEnd\\": 9,
      \\"filePath\\": \\"tests/fixtures/animals.stories.tsx\\",
      \\"parameters\\": {}
    }
  }
}"
`;

exports[`Story name replaces named export as a story name 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"storyname--doggo\\": {
      \\"name\\": \\"Doggo\\",
      \\"levels\\": [
        \\"Storyname\\"
      ],
      \\"locStart\\": 3,
      \\"locEnd\\": 8,
      \\"filePath\\": \\"tests/fixtures/storyname.stories.tsx\\",
      \\"parameters\\": {}
    },
    \\"storyname--capital-city\\": {
      \\"name\\": \\"Capital city\\",
      \\"levels\\": [
        \\"Storyname\\"
      ],
      \\"locStart\\": 13,
      \\"locEnd\\": 15,
      \\"filePath\\": \\"tests/fixtures/storyname.stories.tsx\\",
      \\"parameters\\": {}
    },
    \\"storyname--champs-élysées\\": {
      \\"name\\": \\"Champs élysées\\",
      \\"levels\\": [
        \\"Storyname\\"
      ],
      \\"locStart\\": 17,
      \\"locEnd\\": 19,
      \\"filePath\\": \\"tests/fixtures/storyname.stories.tsx\\",
      \\"parameters\\": {}
    }
  }
}"
`;

exports[`Turn file name delimiters into spaces and levels correctly 1`] = `
"{
  \\"about\\": {
    \\"homepage\\": \\"https://www.ladle.dev\\",
    \\"github\\": \\"https://github.com/tajo/ladle\\",
    \\"version\\": 1
  },
  \\"stories\\": {
    \\"our-animals--mammals--cat\\": {
      \\"name\\": \\"Cat\\",
      \\"levels\\": [
        \\"Our animals\\",
        \\"Mammals\\"
      ],
      \\"locStart\\": 3,
      \\"locEnd\\": 5,
      \\"filePath\\": \\"tests/fixtures/our-animals--mammals.stories.tsx\\",
      \\"parameters\\": {}
    }
  }
}"
`;
